cmake_minimum_required(VERSION 3.16.3 FATAL_ERROR)
project(falcon)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_SHARED_LIBRARY_PREFIX "")
add_library(falcon SHARED src/falcon.cpp src/parser.cpp src/utils.cpp src/falcon.h src/parser.h src/utils.h)
if(UNIX)
include_directories(/opt/zuko/include)
endif()
if(WIN32)
include_directories(C:\zuko\include())
endif()
